@@ -94,6 +94,7 @@
     <caption>Context detail</caption>
     <tbody></tbody>
   </table>
+  <div><button id="previous-details-page">&lt;</button><button id="move-details-page">Move</button><input type="text" id="details-page-count"><button id="next-details-page">&gt;</button></div>
   <table id="results-details">
     <caption>Details</caption>
     <tbody></tbody>
