@@ -1,3 +1,8 @@
+2017-11-01  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/popup/popup.html (Results):
+	Add some elements.
+
 2017-10-31  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js: 
